[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "opencue_cueadmin"
dynamic = ["version"]
dependencies = [
    "opencue_pycue"
]

[tool.hatch.version]
source = "code"
path = "../ci/generate_version_number.py"
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["cueadmin"]

[project.scripts]
cueadmin = "cueadmin.__main__:main"

# --- Pytest configuration ---
[tool.pytest.ini_options]
minversion = "6.0" # Set to required pytest version
testpaths = ["tests"] # Relative path(s) where tests are located
python_files = ["test_*.py", "*_tests.py"] # Default test file pattern
python_functions = ["test_*"] # Default test function pattern

# --- Optional Test Dependencies ---
[project.optional-dependencies]
test = [
    "mock==2.0.0",
    "pyfakefs==5.2.3",
    "pytest"
]
