[build-system]
requires = [
    "hatchling",
    "versioningit"
]
build-backend = "hatchling.build"

[project]
name = "opencue_cuebot"
dynamic = ["version"]
dependencies = [
    "grpcio==1.69.0",
    "grpcio-tools==1.69.0",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["cuebot"]
