[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "grpcio==1.69.0",
    "grpcio-tools==1.69.0",
]
build-backend = "hatchling.build"

[project]
name = "opencue_cuebot"
dynamic = ["version"]
dependencies = [
    "grpcio==1.69.0",
    "grpcio-tools==1.69.0",
]

[tool.hatch.version]
source = "vcs"
# default-version = "0.0.0"

[tool.hatch.version.raw-options]
root = "../"

[tool.hatch.build.targets.wheel]
packages = ["cuebot"]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"
