[build-system]
requires = [
    "hatchling",
    "versioningit",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]
build-backend = "hatchling.build"

[project]
name = "opencue_cuebot"
dynamic = ["version"]
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["cuebot"]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"
