[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]
build-backend = "hatchling.build"

[project]
name = "opencue_proto"
dynamic = ["version"]
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]

[tool.hatch.version]
source = "vcs"
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["opencue_proto"]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"
