[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "opencue_pyoutline"
dynamic = ["version"]
dependencies = [
]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
packages = ["outline", "wrappers", "bin"]
