[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "opencue_rqd"
dynamic = ["version"]
dependencies = [
    "opencue_proto",
    "psutil==5.9.8",
    "pynput==1.7.6",
    "future==1.0.0"
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["rqd"]

[project.scripts]
rqd = "rqd.__main__:main"

# --- Pytest configuration ---
[tool.pytest.ini_options]
minversion = "6.0" # Set to required pytest version
testpaths = ["tests", "pytests"] # Relative path(s) where tests are located
python_files = ["test_*.py", "*_test.py"] # Default test file pattern
python_functions = ["test_*"] # Default test function pattern

# --- Optional Test Dependencies ---
[project.optional-dependencies]
test = [
    "mock==2.0.0",
    "pyfakefs==5.2.3",
    "pytest",
    "docker==7.1.0",
    "loki-urllib3-client"
]
