[workspace]
members = ["crates/opencue-proto", "crates/rqd", "crates/dummy-cuebot"]

[workspace.package]
authors = ["Diego Tavares <dtavares@imageworks.com>"]
edition = "2024"
resolver = "3"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
async-stream = "0.1"
config = "0.14.0"
dashmap = "5.5.3"
futures = "0.3"
once_cell = "1.10.0"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.13.0"
tonic-build = "0.13.0"
thiserror = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
whoami = "1.5.1"
tokio = { version = "1.45", features = ["full"] }
miette = { version = "7.2.0", features = ["fancy"] }
regex = "1.5.4"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-rolling-file = "0.1.2"
tracing-subscriber = "0.3.18"
