[workspace]
members = [
    "crates/opencue-proto",
    "crates/rqd",
    "crates/dummy-cuebot",
    "crates/scheduler",
    "crates/monitoring-indexer"
]
resolver = "2"

[workspace.package]
authors = ["Diego Tavares <dtavares@imageworks.com>"]
edition = "2021"
version = "0.1.11"

[workspace.dependencies]
async-trait = "0.1"
async-stream = "0.1"
config = "0.14.0"
dashmap = "5.5.3"
futures = "0.3"
once_cell = "1.10.0"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.13.0"
tonic-build = "0.13.0"
thiserror = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
whoami = "1.5.1"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
miette = { version = "7.2.0", features = ["fancy"] }
regex = "1.5.4"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-rolling-file = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
# Pin time to 0.3.47: the 0.3.48 release adds an impl that collides with
# sentry-types' blanket `impl<T> From<T> for LogAttribute`, producing an
# E0119 "conflicting implementations" error when building the scheduler
# (which pulls both `sentry` and, via tracing-appender, `time/formatting`).
# Since Cargo.lock is gitignored, CI resolves fresh and would otherwise float
# to the broken 0.3.48. Remove the pin once sentry-types/time resolve this
# upstream. Referenced by the scheduler crate so the constraint takes effect.
time = "=0.3.47"
structopt = "0.3.26"
home = "=0.5.9"
