[package]
name = "rqd"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "openrqd"

[dependencies]
# Internal Dependencies
opencue-proto = { path = "../opencue-proto" }
# dist-lock = { path = "../dist-lock" }

# External Dependencies
chrono = "0.4.38"
bincode = "1.3"
bytesize = { version = "1.2.0", features = ["serde"] }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
async-trait = { workspace = true }
async-stream = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
prost = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
tonic = { workspace = true }
itertools = "0.13.0"
sysinfo = "0.33.1"
nix = { version = "0.29", features = ["process", "signal"] }
users = "0.11"

[dev-dependencies]
tempfile = "3.14.0"
