[package]
name = "rqd"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "openrqd"

[dependencies]
# Internal Dependencies
opencue-proto = { path = "../opencue-proto" }
# dist-lock = { path = "../dist-lock" }

# External Dependencies
chrono = "0.4.38"
bincode = "1.3"
bytesize = { version = "1.2.0", features = ["serde"] }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
async-trait = { workspace = true }
async-stream = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
prost = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
tonic = { workspace = true }
itertools = "0.13.0"
sysinfo = "0.33.1"
nix = { version = "0.29", features = ["process", "signal"] }
users = "0.11"
humantime = "2.2.0"
humantime-serde = "1.1.1"
# tower = { git = "https://github.com/DiegoTavares/tower.git", features = [
#     "retry",
# ] }
tower = { version = "0.5.0" }
http-body = "1.0.1"
http = "1.3.1"
tower-layer = "0.3.3"
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
tower-service = "0.3.3"
http-body-util = "0.1.3"
rand = "0.9.1"

[dev-dependencies]
tempfile = "3.14.0"
