[package]
name = "dummy-cuebot"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "dummy-cuebot"

[dependencies]
# Internal Dependencies
opencue-proto = { path = "../opencue-proto" }

# External Dependencies
futures = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
async-trait = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
itertools = "0.13.0"
miette = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-postgres = "0.7.12"
tonic = { workspace = true }
structopt = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"

[target.'cfg(unix)'.dependencies]
users = "0.11"
