[package]
name = "monitoring-indexer"
description = "OpenCue monitoring event indexer - indexes events from Kafka to Elasticsearch"
authors = ["OpenCue Contributors"]
edition = "2021"
version = "0.1.0"

[[bin]]
name = "monitoring-indexer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Elasticsearch (alpha versions are the norm for this crate)
elasticsearch = "8.5.0-alpha.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14.0"
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
url = "2.5"
