[package]
name = "monitoring-indexer"
description = "OpenCue monitoring event indexer - indexes events from Kafka to Elasticsearch"
authors = ["Ramon Figueiredo <rfigueiredo@imageworks.com>"]
edition.workspace = true
version.workspace = true
license = "Apache-2.0"

[[bin]]
name = "monitoring-indexer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Elasticsearch (alpha versions are the norm for this crate)
elasticsearch = "8.5.0-alpha.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Error handling
thiserror.workspace = true
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
url = "2.5"

# Parallel processing
rayon = "1.10"
