[package]
name = "rqd"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = "Apache-2.0"
description = "Agent for OpenCue"

[features]
default = []
# Containerized Frames is a feature that allows rqd to run in a containerized environment.
# This feature is highly experimental and may not be stable.
containerized_frames = ["bollard"]

[[bin]]
path = "src/main.rs"
name = "openrqd"

[dependencies]
# Internal Dependencies
opencue-proto = { path = "../opencue-proto" }
# dist-lock = { path = "../dist-lock" }

# External Dependencies
bollard = { version = "0.18.1", optional = true }
chrono = "0.4.38"
bincode = "1.3"
bytesize = { version = "1.2.0", features = ["serde"] }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
async-trait = { workspace = true }
async-stream = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
itertools = "0.13.0"
sysinfo = "0.33.1"
nix = { version = "0.29", features = ["process", "signal", "reboot"] }
users = "0.11"
humantime = "2.2.0"
humantime-serde = "1.1.1"
tower = { version = "0.5.0" }
http-body = "1.0.1"
http = "1.3.1"
tower-layer = "0.3.3"
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
tower-service = "0.3.3"
http-body-util = "0.1.3"
rand = "0.9.1"
libc = "0.2"
device_query = "3.0"

[dev-dependencies]
dummy-cuebot = { path = "../dummy-cuebot" }
tempfile = "3.14.0"

# === Rpm configuration ===
[package.metadata.generate-rpm]
name = "openrqd"
post_install_script = """
    /usr/bin/systemctl daemon-reload
    /usr/bin/systemctl enable openrqd.service
    /usr/bin/systemctl start openrqd.service
"""
pre_untrans_script = """
    /usr/bin/systemctl stop openrqd.service
"""

[[package.metadata.generate-rpm.assets]]
source = "../../target/release/openrqd"
dest = "/usr/bin/openrqd"
mode = "755"
user = "root"
group = "root"
caps = "cap_sys_admin=pe cap_net_bind_service=pe cap_net_raw=pe cap_sys_chroot=pe cap_sys_ptrace=pe cap_setuid=pe cap_setgid=pe cap_dac_override=pe cap_fowner=pe"

[[package.metadata.generate-rpm.assets]]
source = "../../config/rqd.yaml"
dest = "/etc/openrqd/rqd.yaml"

[[package.metadata.generate-rpm.assets]]
source = "./resources/openrqd.service"
dest = "/etc/systemd/system/openrqd.service"
